<resources>
    <string name="app_name">Wavez</string>
    <string name="welcome_title">Welcome to Wavez</string>
    <string name="welcome_signin">Sign In</string>
    <string name="welcome_signup">Sign up</string>
    <string name="welcome_name">Full Name</string>
    <string name="welcome_email">Email</string>
    <string name="welcome_password">Password</string>
    <string name="welcome_forgot_password">Forgot Password?</string>
    <string name="welcome_login">Login</string>
    <string name="welcome_register">Register</string>
    <string name="welcome_back">Back</string>

    <string name="home_show">Show</string>
    <string name="home_report">Report</string>
    <string name="home_search">Search</string>
    <string name="home_lets_find">Let\'s find the best beach for you</string>
    <string name="home_beach_near">Beaches near you</string>
    <string name="home_beach_name">Beach name</string>
    <string name="home_value">Score</string>


    <string name="show_km">KM from you</string>
    <string name="show_go_reports">Go To Reports</string>
    <string name="show_moovit">Moovit</string>
    <string name="show_waze">Waze</string>

    <string-array name="beaches">
        <item>Mei Ami beach Ashdod</item>
        <item>Lido beach Ashdod</item>
        <item>Oranim beach Ashdod</item>
        <item>HaKshatot beach Ashdod</item>
        <item>Tet Vav beach Ashdod</item>
        <item>Yud Alef beach Ashdod</item>
        <item>Gils beach Ashdod</item>
        <item>Separate beach Ashdod</item>
        <item>Jerusalem beach Tel Aviv</item>
        <item>Bugrashov beach Tel Aviv</item>
        <item>Hilton beach Tel Aviv</item>
        <item>Metzitzim beach Tel Aviv</item>
        <item>Charles Clore beach Tel Aviv</item>
        <item>Aviv beach Tel Aviv</item>
        <item>Tel Baruch beach Tel Aviv</item>
        <item>HaTsuk beach Tel Aviv</item>
        <item>Gordon beach Tel Aviv</item>


    </string-array>

    <string-array name="categories">
        <item>Distance from the beach</item>
        <item>Name of the Beach</item>
        <item>Review of the beach</item>
        <item>Warmth rating</item>
        <item>Wind rating</item>
        <item>Danger at sea rating</item>
        <item>Accessible rating</item>
        <item>Density rating</item>
        <item>Hygiene rating</item>
        <item>Jellyfish rating</item>
        <item>Dog friendly rating</item>
    </string-array>

    <string name="user_change_name">Change Name</string>
    <string name="user_change_picture">Change Profile\'s Picture</string>
    <string name="user_signout">Sign Out</string>

    <string name="report_density">Density:</string>
    <string name="report_jellyfish">JellyFish:</string>
    <string name="report_flag">Flag:</string>
    <string name="report_wave">Wave:</string>
    <string name="report_temperature">Temperature:</string>
    <string name="report_wind">Wind:</string>
    <string name="report_warmth">Warmth:</string>
    <string name="report_accessibility">Accessibility:</string>
    <string name="report_danger">Dangerous:</string>
    <string name="report_pet">Pet-Friendly:</string>
    <string name="report_hygiene">Hygiene:</string>
    <string name="report_review">Review:</string>
    <string name="report_cancel">Cancel</string>
    <string name="report_ok">OK Report</string>


    <string name="create_report">Create Report</string>
    <string name="select_photo">Select</string>


</resources>