<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserActivity"
    android:background="@drawable/ic_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shapes"
            android:layout_margin="5dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/user_BTN_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/welcome_back"
                android:textAllCaps="false"
                app:cornerRadius="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/shapes">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/user_TXT_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/blue_back"
                android:gravity="center"
                android:textSize="30dp">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/user_TXT_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/blue_back"
                android:gravity="center"
                android:textSize="25dp">

            </com.google.android.material.textview.MaterialTextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/user_BTN_change"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/user_change_name"
                android:textAllCaps="false"
                app:cornerRadius="40dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/user_BTN_signout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/user_signout"
                android:layout_gravity="center"
                android:textAllCaps="false"
                app:cornerRadius="40dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>