<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReportActivity"
    android:background="@drawable/ic_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:background="@drawable/shapes">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/report_BTN_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/welcome_back"
                android:textAllCaps="false"
                app:cornerRadius="40dp"/>

            <ImageView
                android:id="@+id/report_IMG_profile"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="260dp"
                android:src="@drawable/ic_user"
                >
            </ImageView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal"
            android:background="@drawable/shapes">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/report_TXT_nameBeach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:textColor="@color/blue_text_report"
                android:gravity="center"
                android:textStyle="bold"
                >

            </com.google.android.material.textview.MaterialTextView>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="7"
            android:background="@drawable/shapes">

            <GridLayout
                android:id="@+id/main_GRD_gridLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:columnCount="2"
                android:rowCount="3">

                <androidx.cardview.widget.CardView
                    android:id="@+id/record_CRD_density"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/blue_card"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_density"
                            ></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/report_density"
                            android:textAlignment="center"
                            android:textColor="@color/blue_text_card"
                            android:textSize="20dp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/report_CRD_wave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/blue_card"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_wave"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/report_wave"
                            android:textAlignment="center"
                            android:textColor="@color/blue_text_card"
                            android:textSize="20dp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/record_CRD_jellyfish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    android:layout_marginTop="50dp"
                    app:cardBackgroundColor="@color/blue_card"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_jellyfish" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/report_jellyfish"
                            android:textAlignment="center"
                            android:textColor="@color/blue_text_card"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/record_CRD_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    android:layout_marginTop="50dp"
                    app:cardBackgroundColor="@color/blue_card"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_temperatures"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/report_temperature"
                            android:textAlignment="center"
                            android:textColor="@color/blue_text_card"
                            android:textSize="20dp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/record_CRD_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    android:layout_marginTop="50dp"
                    android:outlineAmbientShadowColor="@color/black"
                    app:cardBackgroundColor="@color/blue_card"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_flag"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/report_flag"
                            android:textAlignment="center"
                            android:textColor="@color/blue_text_card"
                            android:textSize="20dp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/report_CRD_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    android:layout_marginTop="50dp"
                    app:cardBackgroundColor="@color/blue_card"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_wind"
                            ></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/report_wind"
                            android:textAlignment="center"
                            android:textColor="@color/blue_text_card"
                            android:textSize="20dp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>

        </LinearLayout>


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>