<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.UserActivityUpgrade">

    <RelativeLayout
        android:id="@+id/profile_RelLay_first"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:background="@color/water">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profile_IMG_back"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/ic_baseline_arrow_back_24"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="130dp"
            android:orientation="vertical"
            android:background="@color/water">

            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/profile_IMG_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_user"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/profile_TXT_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Name"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/profile_LinLay_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/profile_RelLay_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp">

            <ImageView
                android:id="@+id/profile_IMG_mail"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_mail"/>

            <TextView
                android:id="@+id/profile_TXT_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@color/personal_info"
                android:textSize="20sp"
                android:paddingLeft="20dp"
                android:fontFamily="@font/poppins"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_LinLay_second"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_BTN_changePic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_change_picture"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            app:backgroundTint="@color/sea"
            app:cornerRadius="40dp"
            android:fontFamily="@font/poppins">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_BTN_changeName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_change_name"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            app:backgroundTint="@color/sea"
            app:cornerRadius="40dp"
            android:fontFamily="@font/poppins">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_BTN_signout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/user_signout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/sea"
            app:cornerRadius="40dp"
            android:fontFamily="@font/poppins">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>